--- a/src/Sitecore.Support.93837/packages.config
+++ b/src/Sitecore.Support.93837/packages.config
@@ -1,4 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="SC.HtmlAgilityPack" version="8.2.3" targetFramework="net45" />
+  <package id="SC.Sitecore.Client" version="8.2.3" targetFramework="net45" />
   <package id="SC.Sitecore.Kernel" version="8.2.3" targetFramework="net452" />
 </packages>
