--- a/src/Sitecore.Support.93837/App_Config/Include/zzz/Sitecore.Support.93837.config
+++ b/src/Sitecore.Support.93837/App_Config/Include/zzz/Sitecore.Support.93837.config
@@ -1,5 +1,10 @@
-﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
   <sitecore>
-<!--The file is empty on purpose. It will indicate that the patch 93837 is installed-->
+    <pipelines>
+      <saveRichTextContent>
+        <processor type="Sitecore.Support.FixImages, Sitecore.Support.93837" />
+      </saveRichTextContent>
+    </pipelines>
   </sitecore>
 </configuration>
